# picon

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/platform/: mod.rs
src/platform/bsd/: mod.rs
src/platform/linux/: mod.rs
src/platform/macos/: mod.rs
src/platform/unsupported/: mod.rs
src/platform/windows/: hicon.rs  manifest.rs  mod.rs
