[package]
name = "picon"
version = "0.0.0"
edition = "2024"
authors = ["Giuliano Bellini <gyulyvgc99@gmail.com>"]
description = "Get process icons on Windows, macOS, and Linux"
readme = "README.md"
repository = "https://github.com/GyulyVGC/picon"
license = "MIT"
keywords = ["process", "path", "icon"]
categories = ["filesystem", "os"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md", "examples/**/*"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", default-features = false, features = ["NSString"] }
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSWorkspace", "NSImage"] }

[target.'cfg(target_os = "linux")'.dependencies]
shellexpand = "3.1.1"

[target.'cfg(target_os = "windows")'.dependencies]
#windows-icons = "0.3.0"
#winapi = "0.3.9"
widestring = "1.2.1"
windows = { version = "0.62", features = ["Win32_Graphics_Gdi", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
image = "0.25.9"
