[package]
name = "picon"
version = "0.0.0"
edition = "2024"
authors = ["Giuliano Bellini <gyulyvgc99@gmail.com>"]
description = "Get process icons on Windows, macOS, and Linux"
readme = "README.md"
repository = "https://github.com/GyulyVGC/picon"
license = "MIT"
keywords = ["process", "path", "icon"]
categories = ["filesystem", "os"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md", "examples/**/*"]


[dependencies]
iced = { version = "0.14", features = ["image", "svg"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", default-features = false}
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSWorkspace", "NSImage", "NSGraphics", "objc2-core-foundation", "block2"] }
block2 = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
icon = "0.2"
dirs = "6.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-icons = { git = "https://github.com/GyulyVGC/windows-icons" }
