[package]
name = "picon"
version = "0.1.0"
edition = "2024"
authors = ["Giuliano Bellini <gyulyvgc99@gmail.com>"]
description = "Get process icons in a cross-platform way"
readme = "README.md"
repository = "https://github.com/GyulyVGC/picon"
license = "MIT"
keywords = ["process", "path", "icon"]
categories = ["filesystem", "os"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]


[dependencies]
iced = { version = "0.14", features = ["image", "svg"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", default-features = false}
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSWorkspace", "NSImage", "NSGraphics", "objc2-core-foundation", "block2"] }
block2 = "0.6"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
icon = "0.2"
dirs = "6.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
quick-xml = "0.39"
